--- a/css/themes/block.css
+++ b/css/themes/block.css
@@ -29,9 +29,7 @@
 }
 
 .square-content .events {
-	border: 1px solid var(--event-color);
-	border-radius: 2px;
-	background-color: var(--event-color);
+	color: var(--event-color);
 }
 
 .square-content div {
